syntax = "proto3";

package nodehub;

option go_package = "gitlab.haochang.tv/gopkg/nodehub/proto/nh";

import "google/protobuf/empty.proto";
import "nodehub/client.proto";

// 网关功能接口，供内部服务调用
service Gateway {
	// 会话是否存在
	rpc IsSessionExist (IsSessionExistRequest) returns (IsSessionExistResponse) {}
	// 会话数量
	rpc SessionCount (google.protobuf.Empty) returns (SessionCountResponse) {}
	// 修改状态服务路由
	rpc SetServiceRoute (SetServiceRouteRequest) returns (google.protobuf.Empty) {}
	// 删除状态服务路由
	rpc RemoveServiceRoute (RemoveServiceRouteRequest) returns (google.protobuf.Empty) {}
	// 向指定会话推送消息
	rpc PushMessage (PushMessageRequest) returns (PushMessageResponse) {}
}

message SetServiceRouteRequest {
	int32 service_code = 1;
	string session_id = 2;
	string node_id = 3;
}

message RemoveServiceRouteRequest {
	int32 service_code = 1;
	string session_id = 2;
}

message IsSessionExistRequest {
	string session_id = 1;
}

message IsSessionExistResponse {
	string session_id = 1;
	bool exist = 2;
}

message SessionCountResponse {
	int32 count = 1;
}

message PushMessageRequest {
	string session_id = 1;
	Reply reply = 2;
}

message PushMessageResponse {
	string session_id = 1;
	// success 为 false 时，表示会话不存在
	bool success = 2;
}
